# Deployment_model_training

./: Dockerfile  README.md  pyproject.toml
Data/raw/: heart_disease.csv
src/: main.py
src/data/: data_processor.py  data_splitter.py
src/model/: evaluator.py  saver.py  trainer.py
